# Currency-Converter

./: .gitignore  README.md  main.py  package.json  pyproject.toml
api/: scraper.py
app/: layout.tsx  page.tsx
app/lib/: fetcher.ts  useCurrency.ts
app/lib/constants/: currencies.ts
app/ui/: conversion-box.tsx
app/ui/Currency/: CurrencySelector.tsx  currency-boxs.tsx  currency-selector.tsx
front/: package-lock.json
front/src/app/: layout.tsx  page.tsx
py/: main.py
py/api/: scraper.py
