[project]
name = "currency-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "focarica",email = "a.vinicius0042@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
